--- a/index.html
+++ b/index.html
@@ -6,9 +6,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link Css -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Add G.Font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+<!-- link- font awesome  -->
+<script src="https://kit.fontawesome.com/e437a55895.js" crossorigin="anonymous"></script>
+
     <title>World Cup</title>
 </head>
 <body>
-    
+    <section class="header-color header-img">
+        <div>
+            <h1 class="headline">
+                 The Greatest <br> Show On The <br> Earth
+            </h1>
+            <p class="text-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Amet totam, ducimus  debitis reiciendis enim quisquam <br> ut fuga porro! Ex, eum.</p>
+            <a href=""><button class="button-1">Watch Live ></button></a>
+        </div>
+        <div class="fix-image">
+            <img src="images/Banner Image.png" alt="">
+        </div>
+    </section>
+    <section class="second-section">
+        <div class="side-buttons">
+            <div class="button-3"><a href="">Upcoming Match</a></div>
+            <div class="button-4"><a href="">All Group</a></div>
+            <div class="button-5"><a href="">Blog</a></div>
+        </div>
+        <div class="transfers">
+            <div class="transfer">
+                <div class="transfer-banner">
+                    <img src="images/Blog Image.png" alt="">                
+                </div> 
+                <div class="transfer-details">
+                    <button>Transfer</button>
+                    <h3 class="transfer-title">Transfer Live: Cleasea in Talks Over Kimpembe Transfer</h3>
+                    <div class="time">
+                        <div><img src="images/Time Icon.png" alt="">10hr</div>
+                        <div><img src="images/Chat Icon.png" alt="">23</div>
+                    </div>
+                </div>           
+            </div>
+            <div class="transfer">
+                <div class="transfer-banner">
+                    <img src="images/Blog Image.png" alt="">                
+                </div> 
+                <div class="transfer-details">
+                    <button>Transfer</button>
+                    <h3 class="transfer-title">Transfer Live: Cleasea in Talks Over Kimpembe Transfer</h3>
+                    <div class="time">
+                        <div><img src="images/Time Icon.png" alt="">10hr</div>
+                        <div><img src="images/Chat Icon.png" alt="">23</div>
+                    </div>
+                </div>           
+            </div>
+            <div class="transfer">
+                <div class="transfer-banner">
+                    <img src="images/Blog Image.png" alt="">                
+                </div> 
+                <div class="transfer-details">
+                    <button>Transfer</button>
+                    <h3 class="transfer-title">Transfer Live: Cleasea in Talks Over Kimpembe Transfer</h3>
+                    <div class="time">
+                        <div><img src="images/Time Icon.png" alt="">10hr</div>
+                        <div><img src="images/Chat Icon.png" alt="">23</div>
+                    </div>
+                </div>           
+            </div>
+            <div class="transfer">
+                <div class="transfer-banner">
+                    <img src="images/Blog Image.png" alt="">                
+                </div> 
+                <div class="transfer-details">
+                    <button>Transfer</button>
+                    <h3 class="transfer-title">Transfer Live: Cleasea in Talks Over Kimpembe Transfer</h3>
+                    <div class="time">
+                        <div><img src="images/Time Icon.png" alt="">10hr</div>
+                        <div><img src="images/Chat Icon.png" alt="">23</div>
+                    </div>
+                </div>           
+            </div>
+            <div class="transfer">
+                <div class="transfer-banner">
+                    <img src="images/Blog Image.png" alt="">                
+                </div> 
+                <div class="transfer-details">
+                    <button>Transfer</button>
+                    <h3 class="transfer-title">Transfer Live: Cleasea in Talks Over Kimpembe Transfer</h3>
+                    <div class="time">
+                        <div><img src="images/Time Icon.png" alt="">10hr</div>
+                        <div><img src="images/Chat Icon.png" alt="">23</div>
+                    </div>
+                </div>           
+            </div>
+            <div class="transfer">
+                <div class="transfer-banner">
+                    <img src="images/Blog Image.png" alt="">                
+                </div> 
+                <div class="transfer-details">
+                    <button>Transfer</button>
+                    <h3 class="transfer-title">Transfer Live: Cleasea in Talks Over Kimpembe Transfer</h3>
+                    <div class="time">
+                        <div><img src="images/Time Icon.png" alt="">10hr</div>
+                        <div><img src="images/Chat Icon.png" alt="">23</div>
+                    </div>
+                </div>           
+            </div>
+        </div>
+    </section>
+    <footer>
+        <br>
+        <h1>Goal</h1>
+        <hr>
+        <div class="contact">
+            <div><a href="">
+                Contact Us
+            </a></div>
+            <div><a href="">
+                Terms Of Services
+            </a></div>
+            <div><a href="">
+                Privacy Policy
+            </a></div>
+            <div><a href="">
+                Privacy settings
+            </a></div>
+            <div><a href="">
+                Goal App
+            </a></div>
+            <div><a href="">
+                Goal Live
+            </a></div>
+        </div>
+        <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
