Design complete except responcive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1 class="headline">
                  The Greatest <br> Show On The <br> Earth
             </h1>
-            <p class="text-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. <br> Amet totam, ducimus  debitis reiciendis enim quisquam <br> ut fuga porro! Ex, eum.</p>
+            <p class="text-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet totam, ducimus  debitis reiciendis enim quisquam ut fuga porro! Ex, eum.</p>
             <a href=""><button class="button-1">Watch Live ></button></a>
         </div>
         <div class="fix-image">
