Everything is done except responcive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
     <section class="second-section">
         <div class="side-buttons">
-            <div class="button-3"><a href="">Upcoming Match</a></div>
+            <div class="button-3"><a target="_blank"  href="upcoming-match/upcoming-match.html">Upcoming Match</a></div>
             <div class="button-4"><a href="">All Group</a></div>
             <div class="button-5"><a href="">Blog</a></div>
         </div>
