--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
     <title>World Cup</title>
 </head>
 <body>
-    <section class="header-color header-img">
-        <div>
-            <h1 class="headline">
-                 The Greatest <br> Show On The <br> Earth
-            </h1>
-            <p class="text-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet totam, ducimus  debitis reiciendis enim quisquam ut fuga porro! Ex, eum.</p>
-            <a href=""><button class="button-1">Watch Live ></button></a>
-        </div>
-        <div class="fix-image">
-            <img src="images/Banner Image.png" alt="">
+    <section>
+        <div class="container">
+            <div class="header-img">
+                <div>
+                    <h1 class="headline">
+                        The Greatest <br> Show On The <br> Earth
+                        </h1>
+                        <p class="text-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit Amet totam, ducimus  debitis reiciendis enim quisquam ut fuga porro! Ex, eum.</p>
+                        <a href=""><button class="button-1">Watch Live ></button></a>
+                </div>
+            <div class="fix-image">
+                <img src="images/Banner Image.png" alt="">
+            </div>
+            </div>
         </div>
     </section>
     <section class="second-section">
@@ -114,8 +118,13 @@
                         <div><img src="images/Chat Icon.png" alt="">23</div>
                     </div>
                 </div>           
-            </div>
+            </div> 
+            
         </div>
+        
+    </section>
+    <section>
+        <div class="view-btn"><a href="">View All</a></div>
     </section>
     <footer>
         <br>
